Several changes to the UI including refactoring of its code, bug fixes and updated dependencies.

--- a/matui/static/css/base.css
+++ b/matui/static/css/base.css
@@ -1,17 +1,9 @@
-	html, body {
-		margin: 0;
-		padding: 0;
-		height: 100%;
+html, body {
+	margin: 0;
+	padding: 0;
+	min-height: 100vh;
 }
 
-	body {
-		overflow-x: hidden;
-		min-height: 100%;
-	}
-
-	.uidiv {
-		margin: 0;
-		padding: 0;
-		min-height: 100%;
-	}
-	
+.uidiv {
+	height: 100%;
+}
